admin page update

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <!-- custom styling -->
     <link rel="stylesheet" href="web3ladies_t-matic/css/style.css">
-    <link rel="stylesheet" href="web3ladies_t-matic/css/header.css">
+    <link rel="stylesheet" href="./web3ladies_t-matic/css/header.css">
     <title>Lotery Matic</title>
 </head>
 <body>
@@ -30,12 +30,12 @@
         <nav>
            <!--  -->
             <div class="logo">
-                <a href="index.html"><img class="logo-img" src="web3ladies_t-matic/assets/icons/Logo.png" alt=""></a>
+                <a href="index.html"><img class="logo-img" src="web3ladies_t-matic/assets/icons/Matic-L.png" alt=""></a>
                 <span class="menu-bar"><i class="fa-solid fa-bars"></i></span>
             </div>
            <div class="collapsible">
             <div class="logo2">
-                <img class="logo-img" src="web3ladies_t-matic/assets/icons/Logo.png" alt="">
+                <img class="logo-img" src="web3ladies_t-matic/assets/icons/Matic-L.png" alt="">
                 <span class="menu-bar"><i class="fa-solid fa-bars"></i></span>
             </div>
             <div class="collapse">
@@ -53,7 +53,8 @@
                     <li class="wallet-link">Select your wallet <span class="close-opt"><i class="fa-solid fa-xmark"></i></span></li>
                     <li class="wallet-link">Phantom <img src="web3ladies_t-matic/assets/icons/phantom.png" alt=""></li>
                     <li class="wallet-link" >Slope <img src="web3ladies_t-matic/assets/icons/slope.png" alt=""></li>
-                    <li c lass="wallet-link" onclick="connectMetamask()"> Metamask <img src="web3ladies_t-matic/assets/icons/metamask.png" alt="metamask"></li>
+                    <li class="wallet-link" onclick="connectMetamask()"> Metamask <img src="web3ladies_t-matic/assets/icons/metamask.png" alt="metamask"></li>
+                    <li class="wallet-link admin" onclick="connectMetamask()"> Admin <img src="web3ladies_t-matic/assets/icons/metamask.png" alt="metamask"></li>
                     <li class="wallet-link">More Options<span class="dwn-angle"><i class="fa-solid fa-angle-down"></i></span></li>
                 </ul>
                 </div>
