--- a/web3ladies_t-matic/admin.html
+++ b/web3ladies_t-matic/admin.html
@@ -10,9 +10,9 @@
 
     <!-- custom styling -->
     <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/result.css">
-    <!-- <link rel="stylesheet" href="./css/style.css"> -->
-    <title>Result</title>
+    <link rel="stylesheet" href="./css/admin.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Admin</title>
 </head>
 <body>
     <!-- arrow icons -->
@@ -24,7 +24,7 @@
         <nav>
            <!--  -->
             <div class="logo">
-                <a href="./index.html"><img class="logo-img" src="./assets/icons/Matic-L.png" alt=""></a>  
+                <a href="../index.html"><img class="logo-img" src="./assets/icons/Matic-L.png" alt=""></a>  
                 <span class="menu-bar"><i class="fa-solid fa-bars"></i></span>
             </div>
            <div class="collapsible">
@@ -57,15 +57,12 @@
     </header>
     <main>
     <!-- Barakat -->
-    <section class="result-info">
-        <h2 class="sec-title">Matic-Lotto Results & 
-            Winning Numbers</h2>
-            <p class="info"> <span>Check the latest Matic Lotto results and find out if you are a winner!</span>   
-                Compare your lucky number from your ticket with the official Matic
-                Lotto results. If your numbers match the numbers chosen during 
-                the draw - you win!</p>
-    </section>
+   
     <div class="result-table">
+      <div class="result-info">
+        <h2 class="sec-title"> Results 
+        </h2>  
+      </div> 
         <table>
             <thead>
                <tr>
@@ -114,6 +111,81 @@
             </tbody>
         </table>
     </div>
+    <div class="generateNumber">
+       <div class="result-info">
+        <h2 class="sec-title"> Generate Number
+        </h2> 
+        <p class="info">Generate number and view the winners for the draw
+            <br>
+            <br>
+            <span>1 draw</span>
+        </p>
+       </div>
+        <div class="generate">
+            <button class="generate-btn">Generate Number</button>
+            <div class="loading">
+                <div class="percent"></div>
+            </div>
+        </div>
+        <ul class="lucky-number2">
+            <li>9</li>
+            <li>88</li>
+            <li>45</li>
+            <li>54</li>
+            <li>65</li>
+            <li>4</li>
+        </ul>
+    </div>
+    <div class="result-table">
+        <div class="result-info">
+            <h2 class="sec-title"> Winners 
+                </h2>   
+                <p class="info">The winners for the draw</p>   
+        </div>
+        <table>
+            <thead>
+                <tr>
+                 <th>Lottery Name</th>
+                 <th>Result</th>
+                </tr>
+             </thead>
+            <tbody>
+                <tr class="table-row">
+                    <td>Angry Joe</td>
+                    <td> <ul class="lucky-number">
+                        <li>9</li>
+                        <li>88</li>
+                        <li>45</li>
+                        <li>54</li>
+                        <li>65</li>
+                        <li>4</li>
+                    </ul></td>
+                </tr>
+                <tr class="table-row">
+                    <td>Celine Emm</td>
+                    <td> <ul class="lucky-number">
+                        <li>32</li>
+                        <li>12</li>
+                        <li>8</li>
+                        <li>22</li>
+                        <li>2</li>
+                        <li>76</li>
+                    </ul></td>
+                </tr>
+                <tr class="table-row">
+                    <td>Jane Fist</td>
+                    <td> <ul class="lucky-number">
+                        <li>43</li>
+                        <li>4</li>
+                        <li>1</li>
+                        <li>7</li>
+                        <li>38</li>
+                        <li>9</li>
+                    </ul></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
     <!-- Barakat -->
 
   
@@ -139,8 +211,10 @@
             </ul>
         </div>
     </footer>
+    <!-- NFT Lotto contract functions -->
+    <script src="./web3ladies_t-matic/javascript/blockchain.js"></script>
     <!--custom script  -->
     <script src="./javascript/script.js"></script>
-    <script src="./javascript/result.js"></script>
+    <!-- <script src="./javascript/result.js"></script> -->
 </body>
 </html>
