--- a/web3ladies_t-matic/headerfooter.html
+++ b/web3ladies_t-matic/headerfooter.html
@@ -23,12 +23,12 @@
         <nav>
            <!--  -->
             <div class="logo">
-                <img class="logo-img" src="./assets/icons/Logo.png" alt="">
+                <img class="logo-img" src="./assets/icons/Matic-L.png" alt="">
                 <span class="menu-bar"><i class="fa-solid fa-bars"></i></span>
             </div>
            <div class="collapsible">
             <div class="logo2">
-                <img class="logo-img" src="./assets/icons/Logo.png" alt="">
+                <img class="logo-img" src="./assets/icons/Matic-L.png" alt="">
                 <span class="menu-bar"><i class="fa-solid fa-bars"></i></span>
             </div>
             <div class="collapse">
