--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- NFT Loto contract link -->
+<!-- blockchain wallet signin -->
     <script type="text/javascript" src="https://cdn.ethers.io/lib/ethers-5.2.esm.min.js"></script>
+    <!-- NFT Loto contract link -->
     <!-- <script type="application/javascript" src="https://cdn.ethers.io/lib/ethers-5.2.esm.min.js"></script> -->
     <!-- fontawesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -50,7 +50,7 @@
                     <li class="wallet-link">Phantom <img src="web3ladies_t-matic/assets/icons/phantom.png" alt=""></li>
                     <li class="wallet-link" >Slope <img src="web3ladies_t-matic/assets/icons/slope.png" alt=""></li>
                     <li class="wallet-link" onclick="connectMetamask()"> Metamask <img src="web3ladies_t-matic/assets/icons/metamask.png" alt="metamask"></li>
-                    <li class="wallet-link admin" onclick="connectMetamask()"> Admin <img src="web3ladies_t-matic/assets/icons/metamask.png" alt="metamask"></li>
+                    <li class="wallet-link" id="admin"> Admin <img src="web3ladies_t-matic/assets/icons/metamask.png" alt="metamask"></li>
                     <li class="wallet-link">More Options<span class="dwn-angle"><i class="fa-solid fa-angle-down"></i></span></li>
                 </ul>
                 </div>
@@ -458,7 +458,7 @@
     </footer>
     <!-- NFT Lotto contract functions -->
     <script src="./web3ladies_t-matic/javascript/blockchain.js"></script>
-    <!-- <script src="web3ladies_t-matic/javascript/lotto_NFT_094639.js"></script> -->
+    <script src="./lotto_NFT.js"></script>
     <!-- Swipper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <!--custom script  -->
