--- a/web3ladies_t-matic/playscreen.html
+++ b/web3ladies_t-matic/playscreen.html
@@ -7,26 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!-- NFT Loto contract link -->
     <script type="text/javascript" src="https://cdn.ethers.io/lib/ethers-5.2.esm.min.js"></script>
+    
     <!-- fontawesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- custom styling -->
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/playscreen.css">
-    <!-- <link rel="stylesheet" href="./css/style.css"> -->
+    <link rel="stylesheet" href="./css/style.css">
     <title>Play Game</title>
 </head>
 <body>
-    <!-- arrow icons -->
-    <!-- <span class="angle-right"><i class="fa-solid fa-angle-right"></i></span> -->
-    <!-- <span class="angle-left"><i class="fa-solid fa-angle-left"></i></span> -->
-    <!-- <span class="right-arrow"><i class="fa-solid fa-arrow-right"></i></span> -->
+   
     <!-- Barakat -->
     <header>
         <nav>
-           <!--  -->
             <div class="logo">
-              <a href="./index.html" target="_parent"><img class="logo-img" src="./assets/icons/Matic-L.png" alt=""></a>  
+              <a href="../index.html" target="_parent"><img class="logo-img" src="./assets/icons/Matic-L.png" alt=""></a>  
                 <span class="menu-bar"><i class="fa-solid fa-bars"></i></span>
             </div>
            <div class="collapsible">
