--- a/web3ladies_t-matic/claim-reward.html
+++ b/web3ladies_t-matic/claim-reward.html
@@ -24,7 +24,7 @@
         <nav>
            <!--  -->
             <div class="logo">
-                <a href="./index.html" target="_parent"><img class="logo-img" src="./assets/icons/Matic-L.png" alt=""></a>
+                <a href="../index.html" target="_parent"><img class="logo-img" src="./assets/icons/Matic-L.png" alt=""></a>
                 <span class="menu-bar"><i class="fa-solid fa-bars"></i></span>
             </div>
            <div class="collapsible">
