--- a/web3ladies_t-matic/playscreen.html
+++ b/web3ladies_t-matic/playscreen.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!-- NFT Loto contract link -->
-    <script type="text/javascript" src="https://cdn.ethers.io/lib/ethers-5.2.esm.min.js"></script>
+    <!-- <script type="text/javascript" src="https://cdn.ethers.io/lib/ethers-5.2.esm.min.js"></script> -->
     
     <!-- fontawesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -28,14 +28,15 @@
             </div>
            <div class="collapsible">
             <div class="logo2">
-                <img class="logo-img" src="./assets/icons/Matic-L.png" alt="">
+                <a href="../index.html" target="_parent"><img class="logo-img" src="./assets/icons/Matic-L.png" alt=""></a>  
+
                 <span class="menu-bar"><i class="fa-solid fa-bars"></i></span>
             </div>
             <div class="collapse">
                 <ul class="nav-menu">
-                    <li class="nav-item"><a class="nav-link" href="./index.html" target="_parent">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/index.html" target="_parent">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Lotteries</a></li>
-                    <li class="nav-item" ><a class="nav-link" href="./result.html">Result</a></li>
+                    <li class="nav-item" ><a class="nav-link" href="./result.html" target="_parent">Result</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">How to play</a></li>
                 </ul>
@@ -206,20 +207,11 @@
         </ul>
 
         <p class="draw-num"><span>1</span> draw</p>
-       <a href="./reward.html"><button class="confirm-draw">Confirm Transaction</button></a> 
+       <a href="./reward.html" target="_parent"><button class="confirm-draw">Confirm Transaction</button></a> 
     </section>
     <!-- Barakat -->
-    <!-- Hafsoh -->
-    <section>
+   
 
-    </section>
-    <!-- Hafsoh -->
-
-    <!-- Glory -->
-    <section>
-
-    </section>
-    <!-- Glory -->
     </main>
 
     <footer>
