--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- blockchain wallet signin -->
-    <script type="text/javascript" src="https://cdn.ethers.io/lib/ethers-5.2.esm.min.js"></script>
+    <!-- <script type="module" src="https://cdn.ethers.io/lib/ethers-5.2.esm.min.js"></script> -->
 
-    <!-- NFT Loto contract link -->
-    <!-- <script type="application/javascript" src="https://cdn.ethers.io/lib/ethers-5.2.esm.min.js"></script> -->
     
     <!-- fontawesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -39,9 +37,9 @@
             </div>
             <div class="collapse">
                 <ul class="nav-menu">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html" target="_parent">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#lotteries">Lotteries</a></li>
-                    <li class="nav-item" ><a class="nav-link" href="web3ladies_t-matic/result.html">Result</a></li>
+                    <li class="nav-item" ><a class="nav-link" href="web3ladies_t-matic/result.html" target="_parent">Result</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#how-to-play">How to play</a></li>
                 </ul>
@@ -53,7 +51,7 @@
                     <li class="wallet-link">Phantom <img src="web3ladies_t-matic/assets/icons/phantom.png" alt=""></li>
                     <li class="wallet-link" >Slope <img src="web3ladies_t-matic/assets/icons/slope.png" alt=""></li>
                     <li class="wallet-link" onclick="connectMetamask()"> Metamask <img src="web3ladies_t-matic/assets/icons/metamask.png" alt="metamask"></li>
-                    <li class="wallet-link" id="admin"> Admin <img src="web3ladies_t-matic/assets/icons/metamask.png" alt="metamask"></li>
+                    <li class="wallet-link" id="adminn"> Admin <img src="web3ladies_t-matic/assets/icons/metamask.png" alt="metamask"></li>
                     <li class="wallet-link">More Options<span class="dwn-angle"><i class="fa-solid fa-angle-down"></i></span></li>
                 </ul>
                 </div>
@@ -70,7 +68,7 @@
                     NFT Lottery 
                     Community</h1>
                     <p>Play the Matic-Lotto for a chance to win huge NFT prizes</p>
-                    <a href="web3ladies_t-matic/playscreen.html" target="_blank" class="read-more">Play Now</a>
+                    <a href="web3ladies_t-matic/playscreen.html" target="_parent" class="read-more">Play Now</a>
             </div>
             <div class="hero-img">
                 <div class="overlay-1"></div>
@@ -459,9 +457,13 @@
             </ul>
         </div>
     </footer>
+    <!-- NFT Loto contract link -->
+    <!-- <script type="application/javascript" src="https://cdn.ethers.io/lib/ethers-5.2.esm.min.js"></script> -->
+    
     <!-- NFT Lotto contract functions -->
-    <script src="./web3ladies_t-matic/javascript/blockchain.js"></script>
+    <script type="text/javascript" src="./web3ladies_t-matic/javascript/blockchain.js"></script>
     <!-- <script src="./lotto_NFT.js"></script> -->
+
     <!-- Swipper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <!--custom script  -->
