--- a/web3ladies_t-matic/admin.html
+++ b/web3ladies_t-matic/admin.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <script type="application/javascript" src="https://cdn.ethers.io/lib/ethers-5.2.esm.min.js"></script>
+    <!-- <script type="application/javascript" src="https://cdn.ethers.io/lib/ethers-5.2.esm.min.js"></script> -->
+    <script src="./javascript/script.js" defer></script>
+    <script src="./javascript/blockchain.js" defer></script>
 
     <!-- fontawesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -27,30 +29,30 @@
         <nav>
            <!--  -->
             <div class="logo">
-                <a href="../index.html"><img class="logo-img" src="./assets/icons/Matic-L.png" alt=""></a>  
+                <a href="../index.html" target="_parent"><img class="logo-img" src="./assets/icons/Matic-L.png" alt=""></a>  
                 <span class="menu-bar"><i class="fa-solid fa-bars"></i></span>
             </div>
            <div class="collapsible">
             <div class="logo2">
-                <img class="logo-img" src="./assets/icons/Matic-L.png" alt="">
+              <a href="../index.html" target="_parent"> <img class="logo-img" src="./assets/icons/Matic-L.png" alt=""></a>
                 <span class="menu-bar"><i class="fa-solid fa-bars"></i></span>
             </div>
             <div class="collapse">
                 <ul class="nav-menu">
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html" target="_parent">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Lotteries</a></li>
-                    <li class="nav-item" ><a class="nav-link" href="#">Result</a></li>
+                    <li class="nav-item" ><a class="nav-link" href="./result.html" target="_parent">Result</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">How to play</a></li>
                 </ul>
                 <div class="btn">
-                <a class="connect-btn">Connect Wallet</a>
+                <a class="connect-btn" id="accountArea">Connect Wallet</a>
                 <span class="close-bar"><i class="fa-solid fa-xmark"></i></span>
                 <ul class="connect-wallet" id="connect-wallet">
                     <li class="wallet-link">Select your wallet <span class="close-opt"><i class="fa-solid fa-xmark"></i></span></li>
                     <li class="wallet-link">Phantom <img src="./assets/icons/phantom.png" alt=""></li>
                     <li class="wallet-link" >Slope <img src="./assets/icons/slope.png" alt=""></li>
-                    <li class="wallet-link">Metamask <img src="./assets/icons/metamask.png" alt="metamask"></li>
+                    <li class="wallet-link" onclick="connectMetamask()">Metamask <img src="./assets/icons/metamask.png" alt="metamask"></li>
                     <li class="wallet-link">More Options<span class="dwn-angle"><i class="fa-solid fa-angle-down"></i></span></li>
                 </ul>
                 </div>
@@ -215,10 +217,9 @@
         </div>
     </footer>
     <!-- NFT Lotto contract functions -->
-    <script src="./web3ladies_t-matic/javascript/blockchain.js"></script>
 
     <!--custom script  -->
-    <script src="./javascript/script.js"></script>
+    <!-- <script src="./javascript/script.js"></script> -->
     <!-- <script src="./javascript/result.js"></script> -->
 </body>
 </html>
