--- a/web3ladies_t-matic/claim-reward.html
+++ b/web3ladies_t-matic/claim-reward.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,25 +28,26 @@
             </div>
            <div class="collapsible">
             <div class="logo2">
-                <img class="logo-img" src="./assets/icons/Matic-L.png" alt="">
+              <a href="../index.html" target="_parent"><img class="logo-img" src="./assets/icons/Matic-L.png" alt=""></a>
+
                 <span class="menu-bar"><i class="fa-solid fa-bars"></i></span>
             </div>
             <div class="collapse">
                 <ul class="nav-menu">
                     <li class="nav-item"><a class="nav-link" href="./index.html" target="_parent">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Lotteries</a></li>
-                    <li class="nav-item" ><a class="nav-link" href="./result.html" target="">Result</a></li>
+                    <li class="nav-item" ><a class="nav-link" href="./result.html" target="_parent">Result</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">How to play</a></li>
                 </ul>
                 <div class="btn">
-                <a class="connect-btn">Connect Wallet</a>
+                <a class="connect-btn" id="accountArea">Connect Wallet</a>
                 <span class="close-bar"><i class="fa-solid fa-xmark"></i></span>
                 <ul class="connect-wallet" id="connect-wallet">
                     <li class="wallet-link">Select your wallet <span class="close-opt"><i class="fa-solid fa-xmark"></i></span></li>
                     <li class="wallet-link">Phantom <img src="./assets/icons/phantom.png" alt=""></li>
                     <li class="wallet-link" >Slope <img src="./assets/icons/slope.png" alt=""></li>
-                    <li class="wallet-link connect1" id="connect" onclick="myFunction();" >Metamask <img src="./assets/icons/metamask.png" alt="metamask"></li>
+                    <li class="wallet-link connect1" id="connect" onclick="connectMetamask()" >Metamask <img src="./assets/icons/metamask.png" alt="metamask"></li>
                     <li class="wallet-link">More Options<span class="dwn-angle"><i class="fa-solid fa-angle-down"></i></span></li>
                 </ul>
                 </div>
@@ -152,6 +152,7 @@
         </div>
     </footer>
     <!--custom script  -->
+    <script src="./javascript/blockchain.js"></script>
     <script src="./javascript/script.js"></script>
     <script src="./javascript/claim-reward.js"></script>
 </body>
