--- a/web3ladies_t-matic/playscreen.html
+++ b/web3ladies_t-matic/playscreen.html
@@ -34,7 +34,7 @@
             </div>
             <div class="collapse">
                 <ul class="nav-menu">
-                    <li class="nav-item"><a class="nav-link" href="/index.html" target="_parent">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html" target="_parent">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Lotteries</a></li>
                     <li class="nav-item" ><a class="nav-link" href="./result.html" target="_parent">Result</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">About</a></li>
