--- a/web3ladies_t-matic/result.html
+++ b/web3ladies_t-matic/result.html
@@ -34,9 +34,9 @@
             </div>
             <div class="collapse">
                 <ul class="nav-menu">
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Lotteries</a></li>
-                    <li class="nav-item" ><a class="nav-link" href="#">Result</a></li>
+                    <li class="nav-item" ><a class="nav-link" href="./result.html">Result</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">How to play</a></li>
                 </ul>
