--- a/web3ladies_t-matic/reward.html
+++ b/web3ladies_t-matic/reward.html
@@ -29,12 +29,12 @@
             </div>
            <div class="collapsible">
             <div class="logo2">
-                <img class="logo-img" src="./assets/icons/Matic-L.png" alt="">
+                <a href="../index.html" target="_parent"><img class="logo-img" src="./assets/icons/Matic-L.png" alt=""></a>
                 <span class="menu-bar"><i class="fa-solid fa-bars"></i></span>
             </div>
             <div class="collapse">
                 <ul class="nav-menu">
-                    <li class="nav-item"><a class="nav-link" href="index.html" target="_parent">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html" target="_parent">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Lotteries</a></li>
                     <li class="nav-item" ><a class="nav-link" href="./result.html" target="_parent">Result</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">About</a></li>
