--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <img class="hafs-img" src="web3ladies_t-matic/assets/player2.png" alt="">
                 <div class="details-container">
                     <div class="btn-div">
-                        <p class="sold-out-btn" >SOld Out</p>
+                        <p class="sold-out-btn" >Sold Out</p>
                     </div>
                     <div>
                         <p class="angry-joe">Angry  Joe #990</p>
@@ -171,7 +171,7 @@
                 <img class="hafs-img" src="web3ladies_t-matic/assets/player3.png" alt="">
                 <div class="details-container">
                     <div class="btn-div">
-                        <p class="sold-out-btn" >SOld Out</p>
+                        <p class="sold-out-btn" >Sold Out</p>
                     </div>
                     <div>
                         <p class="angry-joe">Angry  Joe #990</p>
@@ -279,7 +279,7 @@
                         <p class="sold-out-btn" >Upcoming</p>
                     </div>
                     <div>
-                        <p class="angry-joe">Celine Emm</p>
+                        <p class="angry-joe">Phil Joe</p>
                     </div>  
                     <div style="display: flex;">
                         <div style="padding: 10px;" class="tickets">
@@ -300,13 +300,13 @@
             </div>
 
             <div class="swiper-slide user3">
-                <img class="hafs-img" src="web3ladies_t-matic/assets/player1.png" alt="">
+                <img class="hafs-img" src="web3ladies_t-matic/assets/player3.png" alt="">
                 <div class="details-container">
                     <div class="btn-div">
                         <p class="sold-out-btn" >Upcoming</p>
                     </div>
                     <div>
-                        <p class="angry-joe">Celine Emm</p>
+                        <p class="angry-joe">Anna Ray</p>
                     </div>  
                     <div style="display: flex;">
                         <div style="padding: 10px;" class="tickets">
@@ -327,13 +327,13 @@
             </div>
 
             <div class="swiper-slide user4">
-                <img class="hafs-img" src="web3ladies_t-matic/assets/player1.png" alt="">
+                <img class="hafs-img" src="web3ladies_t-matic/assets/player4.png" alt="">
                 <div class="details-container">
                     <div class="btn-div">
                         <p class="sold-out-btn" >Upcoming</p>
                     </div>
                     <div>
-                        <p class="angry-joe">Celine Emm</p>
+                        <p class="angry-joe">Badley West</p>
                     </div>  
                     <div style="display: flex;">
                         <div style="padding: 10px;" class="tickets">
