--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                          Matic-Lotto Extra
                     </h3>
                     <p>
-                     Other special benes
+                     Other special bonus
                     </p>
                 </div>
                
