--- a/web3ladies_t-matic/reward.html
+++ b/web3ladies_t-matic/reward.html
@@ -115,6 +115,7 @@
         </div>
     </footer>
     <!--custom script  -->
+    <script src="./javascript/reward.js"></script>
     <script src="./javascript/blockchain.js"></script>
     <script src="./javascript/script.js"></script>
 </body>
