admin page update

--- a/web3ladies_t-matic/admin.html
+++ b/web3ladies_t-matic/admin.html
@@ -123,7 +123,11 @@
         <p class="info">Generate number and view the winners for the draw
             <br>
             <br>
-            <span>1 draw</span>
+            <!-- <span>1 draw</span> -->
+            <select name="draw" id="draw" class="draw">
+                <option>1 draw</option>
+                <option>2 draw</option>
+            </select>
         </p>
        </div>
         <div class="generate">
