integrate confirm transaction button with contract

--- a/index.html
+++ b/index.html
@@ -459,7 +459,10 @@
     </footer>
     <!-- NFT Loto contract link -->
     <!-- <script type="application/javascript" src="https://cdn.ethers.io/lib/ethers-5.2.esm.min.js"></script> -->
-    
+    <script
+    src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
+    type="application/javascript">
+  </script>
     <!-- NFT Lotto contract functions -->
     <script type="text/javascript" src="./web3ladies_t-matic/javascript/blockchain.js"></script>
     <!-- <script src="./lotto_NFT.js"></script> -->
@@ -467,6 +470,7 @@
     <!-- Swipper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <!--custom script  -->
+    <script src="../Matic-Lotto-NFTLottery/web3ladies_t-matic/reward.html"></script>
     <script src="web3ladies_t-matic/javascript/script.js"></script>
     <!-- <script src="web3ladies_t-matic/javascript/claim-reward.js"></script> -->
 </body>
