--- a/web3ladies_t-matic/playscreen.html
+++ b/web3ladies_t-matic/playscreen.html
@@ -207,7 +207,7 @@
         </ul>
 
         <p class="draw-num"><span>1</span> draw</p>
-       <a href="./reward.html" target="_parent"><button class="confirm-draw">Confirm Transaction</button></a> 
+       <a  target="_parent"><button class="confirm-draw" onclick="participate()">Confirm Transaction</button></a> 
     </section>
     <!-- Barakat -->
    
@@ -234,8 +234,13 @@
             </ul>
         </div>
     </footer>
+    <script
+    src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
+    type="application/javascript">
+  </script>
      <!-- NFT Lotto contract functions -->
-     <script src="./javascript/blockchain.js"></script>
+     <script type="text/javascript" src="./javascript/blockchain.js"></script>
+     <script type="text/javascript" src="/lotto_NFT.js"></script>
     <!--custom script  -->
     <script src="./javascript/playscreen.js"></script>
     <script src="./javascript/script.js"></script>
