--- a/web3ladies_t-matic/reward.html
+++ b/web3ladies_t-matic/reward.html
@@ -114,9 +114,11 @@
             </ul>
         </div>
     </footer>
-    <!--custom script  -->
-    <script src="./javascript/reward.js"></script>
-    <script src="./javascript/blockchain.js"></script>
-    <script src="./javascript/script.js"></script>
+   <!-- NFT Lotto contract functions -->
+   <script type="text/javascript" src="./javascript/blockchain.js"></script>
+   <script type="text/javascript" src="/lotto_NFT.js"></script>
+  <!--custom script  -->
+  <script src="./javascript/playscreen.js"></script>
+  <script src="./javascript/script.js"></script>
 </body>
 </html>
