admin page access code

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     NFT Lottery 
                     Community</h1>
                     <p>Play the Matic-Lotto for a chance to win huge NFT prizes</p>
-                    <a href="web3ladies_t-matic/playscreen.html" target="_parent" class="read-more">Play Now</a>
+                    <a href="web3ladies_t-matic/playscreen.html" target="_parent" class=" play-now">Play Now</a>
             </div>
             <div class="hero-img">
                 <div class="overlay-1"></div>
