--- a/web3ladies_t-matic/admin.html
+++ b/web3ladies_t-matic/admin.html
@@ -144,6 +144,7 @@
             <li>65</li>
             <li>4</li>
         </ul>
+        <button class="publish">Publish</button>
     </div>
     <div class="result-table">
         <div class="result-info">
